# TIGER

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_rqvae.py
configs/: rqvae_spotify.gin
data/: preprocessing.py  processed.py  spotify_custom.py
